@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T08:20:48Z",
-  "count_outdated" : 276,
-  "uniques_outdated" : 177,
-  "count" : 303,
-  "uniques" : 196,
+  "timestamp" : "2022-06-02T16:25:10Z",
+  "count_outdated" : 278,
+  "uniques_outdated" : 178,
+  "count" : 305,
+  "uniques" : 197,
   "clones" : [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 13,
@@ -58,6 +51,13 @@
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
