@@ -3,11 +3,6 @@
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 13,
       "uniques": 10
@@ -40,6 +35,11 @@
     {
       "timestamp": "2022-06-01T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
